re-enable proguard, mistakenly completely disabled with 1222a40f
Unfortunately it's necessary to manually add various methods used by
the integration tests - as they're only supplied by the implementation APK,
and proguard needs to know not to throw them away so they're available when
the integration tests run.

--- a/pom.xml
+++ b/pom.xml
@@ -110,11 +110,14 @@
                         <sdk>
                             <platform>14</platform>
                         </sdk>
-                        <proguardConfig>../proguard.cfg</proguardConfig>
                         <zipalign>
                             <verbose>true</verbose>
                         </zipalign>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
+                        <proguard>
+                            <skip>false</skip>
+                            <config>../proguard.cfg</config>
+                        </proguard>
                         <manifest>
                             <versionName />
                             <versionCodeUpdateFromVersion>true</versionCodeUpdateFromVersion>
