--- a/proguard.cfg
+++ b/proguard.cfg
@@ -57,3 +57,13 @@
 -keep public class * extends junit.framework.TestCase
 
 -keepclassmembers class * { @com.google.inject.Provides *; @android.test.suitebuilder.annotation.* *; void test*(...); }
+
+-keep class com.google.inject.util.Modules { public *** override(...); }
+-keep class com.google.inject.util.Modules$OverriddenModuleBuilder { *; }
+-keep class org.apache.commons.io.FileUtils { public *** openOutputStream(...); }
+-keep class org.apache.commons.io.IOUtils  { public *** closeQuietly(...); public *** copy(...); }
+-keepclassmembers class roboguice.RoboGuice$util { *; }
+-keep class org.apache.commons.io.input.BoundedInputStream { *; }
+-keep class com.madgag.agit.git.model.RDTTag$TagSummary { *** getName(); }
+-keep class org.eclipse.jgit.transport.RemoteConfig { *** removeURI(...); }
+
