--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -68,6 +68,7 @@
             <groupId>com.madgag</groupId>
             <artifactId>mini-git-server-war</artifactId>
             <version>0.4</version>
+            <scope>provided</scope>
             <type>war</type>
         </dependency>
     </dependencies>
