--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -125,13 +125,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".weblaunchers.BitBucketWebLaunchActivity" android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".weblaunchers.BitBucketWebLaunchActivity">
 			<intent-filter>
-                <category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE"></category>
-                <action android:name="android.intent.action.VIEW"></action>
-				<data android:host="bitbucket.org" android:scheme="https" android:pathPattern="/.*/.*" />
-				<data android:host="bitbucket.org" android:scheme="http" android:pathPattern="/.*/.*" />
+                <category android:name="android.intent.category.DEFAULT"/>
+				<category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="android.intent.action.VIEW"/>
+				<data android:host="bitbucket.org" android:pathPattern="/.*/.*" android:scheme="https"/>
+				<data android:host="bitbucket.org" android:pathPattern="/.*/.*" android:scheme="http"/>
 			</intent-filter>
 		</activity>
 
