--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="1290" android:versionName="1.29-SNAPSHOT" package="com.madgag.agit">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="${versionCode}" android:versionName="1.29-SNAPSHOT" package="com.madgag.agit">
     <application android:debuggable="true" android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.App">
 
         <activity android:name="DashboardActivity">
