--- a/proguard.cfg
+++ b/proguard.cfg
@@ -58,6 +58,9 @@
 
 -keepclassmembers class * { @com.google.inject.Provides *; @android.test.suitebuilder.annotation.* *; void test*(...); }
 
+-keepclassmembers class * extends com.actionbarsherlock.ActionBarSherlock { public <init>(...); }
+
+
 -keep class com.google.inject.util.Modules { public *** override(...); }
 -keep class com.google.inject.util.Modules$OverriddenModuleBuilder { *; }
 -keep class org.apache.commons.io.FileUtils { public *** openOutputStream(...); }
