--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="${versionCode}" android:versionName="1.29-SNAPSHOT" package="com.madgag.agit">
-    <application android:debuggable="true" android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.App">
+    <application android:debuggable="true" android:icon="@drawable/icon" android:label="@string/app_name"  android:theme="@style/Theme.Sherlock.Light.DarkActionBar.ForceOverflow">
 
         <activity android:name="DashboardActivity">
             <intent-filter>
@@ -164,7 +164,7 @@
 
 
     </application>
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="13"/>
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="15"/>
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
