--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="${versionCode}" android:versionName="1.29-SNAPSHOT" package="com.madgag.agit">
-    <application android:debuggable="true" android:icon="@drawable/icon" android:label="@string/app_name"  android:theme="@style/Theme.Sherlock.Light.DarkActionBar.ForceOverflow">
+    <application android:debuggable="true" android:icon="@drawable/icon" android:label="@string/app_name"  android:theme="@style/Theme.App">
 
         <activity android:name="DashboardActivity">
             <intent-filter>
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="RDTypeListActivity">
+        <activity android:name="RDTypeListActivity" android:theme="@style/Theme.App.SuperTitle">
             <intent-filter>
                 <action android:name="org.openintents.git.remote.LIST"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -43,14 +43,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="RDTBranchListActivity">
+        <activity android:name="RDTBranchListActivity" android:theme="@style/Theme.App.SuperTitle">
             <intent-filter>
                 <action android:name="org.openintents.git.branch.LIST"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
-        <activity android:name="BranchViewer">
+        <activity android:name="BranchViewer" android:theme="@style/Theme.App.SuperTitle">
             <intent-filter>
                 <action android:name="org.openintents.git.branch.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -64,7 +64,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="CommitViewerActivity">
+        <activity android:name="CommitViewerActivity" android:theme="@style/Theme.App.SuperTitle">
             <intent-filter>
                 <action android:name="org.openintents.git.commit.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
