Fix TagViewer regression and switch to integration test rather than robolectric
The awful guice repository-scope problems are avoided by passing the repo down
as a parameter - so the TagViewer is no longer blank.

The robolectric test has been dying horribly on some systems, seemly due to
bytecode problems, and it didn't give any indication of failure when the
TagViewer regressed - so an integration test is replacing the robolectric one.

--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -70,6 +70,16 @@
             <scope>provided</scope>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.android.robotium</groupId>
+            <artifactId>robotium-solo</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.rtyley</groupId>
+            <artifactId>android-screenshot-celebrity</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
