--- a/proguard.cfg
+++ b/proguard.cfg
@@ -14,6 +14,7 @@
 -keepclassmembers enum * { public static **[] values(); public static ** valueOf(java.lang.String); }
 
 -keep class com.madgag.agit.**
+-keep class com.madgag.agit.** { public static *; }
 -keep class com.madgag.android.blockingprompt.**
 
 -keep public class * extends android.app.Activity
