Use a Loader for the dashboard, get work off the UI thread
Also using a 'fragment' for the first time- the repo list fragment.

--- a/proguard.cfg
+++ b/proguard.cfg
@@ -16,6 +16,7 @@
 -keep class com.madgag.agit.**
 -keep class com.madgag.agit.** { public static *; }
 -keep class com.madgag.android.blockingprompt.**
+-keepclassmembers class * extends com.madgag.android.listviews.ViewHolder { public <init>(...); }
 
 -keep public class * extends android.app.Activity
 -keep public class * extends android.app.Application
