--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>agit-integration-tests</artifactId>
 
     <parent>
-        <version>1.31</version>
+        <version>1.32-SNAPSHOT</version>
         <groupId>com.madgag</groupId>
         <artifactId>agit-parent</artifactId>
     </parent>
