--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>agit</artifactId>
 
     <parent>
-        <version>1.32</version>
+        <version>1.33-SNAPSHOT</version>
         <groupId>com.madgag</groupId>
         <artifactId>agit-parent</artifactId>
     </parent>
