Fix signing release APK when using Java 7
Agit v1.31 was the first release of Agit signed using Java 7, which
defaults to using SHA-256, unsupported on Android devices for APK
verification.

http://stackoverflow.com/a/9567153/438886

https://twitter.com/AgitApp/status/212784940595691520

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -228,6 +228,12 @@
                                     <storepass>${sign.storepass}</storepass>
                                     <keypass>${sign.keypass}</keypass>
                                     <verbose>true</verbose>
+                                    <arguments>
+                                        <argument>-sigalg</argument>
+                                        <argument>MD5withRSA</argument>
+                                        <argument>-digestalg</argument>
+                                        <argument>SHA1</argument>
+                                    </arguments>
                                 </configuration>
                             </execution>
                         </executions>
