--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -131,6 +131,12 @@
             <artifactId>roboguice-sherlock</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.madgag</groupId>
+            <artifactId>pulltorefresh-library</artifactId>
+            <version>1.3.0-UNOFFICIAL-ROBERTO-RELEASE</version>
+            <type>apklib</type>
+        </dependency>
     </dependencies>
     <build>
         <resources>
