--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -137,6 +137,12 @@
             <version>1.3.0-UNOFFICIAL-ROBERTO-RELEASE</version>
             <type>apklib</type>
         </dependency>
+        <dependency>
+            <groupId>com.viewpagerindicator</groupId>
+            <artifactId>library</artifactId>
+            <version>2.3.1</version>
+            <type>apklib</type>
+        </dependency>
     </dependencies>
     <build>
         <resources>
