Add blob-viewer activity
Use the google-code-prettify library to present text-based blob content,
or launch the android picker if it's binary (passing thru detected
mime-type)

Amend blob frag to launch viewer...

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -71,6 +71,13 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="BlobViewerActivity" android:theme="@style/Theme.App.SuperTitle">
+            <intent-filter>
+                <action android:name="org.openintents.git.revision.file.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
         <activity android:name="CloneLauncherActivity">
             <intent-filter>
                 <action android:name="org.openintents.git.clone.PREPARE"/>
