--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -132,9 +132,9 @@
             <version>1.4</version>
         </dependency>
         <dependency>
-            <groupId>com.madgag</groupId>
-            <artifactId>pulltorefresh-library</artifactId>
-            <version>1.3.0-UNOFFICIAL-ROBERTO-RELEASE</version>
+            <groupId>com.github.chrisbanes.pulltorefresh</groupId>
+            <artifactId>library</artifactId>
+            <version>1.3.3</version>
             <type>apklib</type>
         </dependency>
         <dependency>
