--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -9,7 +9,7 @@
         <artifactId>agit-parent</artifactId>
     </parent>
     <properties>
-        <abs.version>4.1.0</abs.version>
+        <abs.version>4.2.0</abs.version>
     </properties>
 
     <packaging>apk</packaging>
@@ -115,13 +115,13 @@
         </dependency>
         <dependency>
             <groupId>com.actionbarsherlock</groupId>
-            <artifactId>library</artifactId>
+            <artifactId>actionbarsherlock</artifactId>
             <version>${abs.version}</version>
             <type>apklib</type>
         </dependency>
         <dependency>
             <groupId>com.actionbarsherlock</groupId>
-            <artifactId>library</artifactId>
+            <artifactId>actionbarsherlock</artifactId>
             <version>${abs.version}</version>
             <type>jar</type>
             <scope>provided</scope>
