Specify a version for maven-resources-plugin
Version should be fixed as far as agit can't be build
with recent versions of this plugin.

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -165,6 +165,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.1</version>
                 <executions>
                     <execution>
                         <phase>initialize</phase>
