--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -164,7 +164,9 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
                 <executions>
                     <execution>
                         <phase>initialize</phase>
