--- a/agit-test-utils/pom.xml
+++ b/agit-test-utils/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>agit-test-utils</artifactId>
 
     <parent>
-        <version>1.35</version>
+        <version>1.36-SNAPSHOT</version>
         <groupId>com.madgag</groupId>
         <artifactId>agit-parent</artifactId>
     </parent>
