zipalign skip has always defaulted to 'true'???
Puzzled as to how this ever worked for Agit.

http://maven-android-plugin-m2site.googlecode.com/svn/zipalign-mojo.html

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -263,6 +263,7 @@
                             </sign>
                             <zipalign>
                                 <verbose>true</verbose>
+                                <skip>false</skip>
                                 <outputApk>${project.build.directory}/${project.artifactId}-${project.version}-signed-aligned.apk</outputApk>
                             </zipalign>
                             <manifest>
