Update to AMP 3.5.0
https://groups.google.com/d/topic/maven-android-developers/w5H0oRWJN9I/discussion

Note that non-release builds are now debuggable by default...

--- a/agit-integration-tests/AndroidManifest.xml
+++ b/agit-integration-tests/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <!-- We add an application tag here just so that we can indicate that
          this package needs to link against the android.test library,
          which is needed when building test cases. -->
-    <application android:debuggable="true">
+    <application>
         <uses-library android:name="android.test.runner"/>
     </application>
 
