--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ language: java
 jdk:
   - openjdk6
 before_install:
+  # needed to run SDK on x64 systems
+  - sudo apt-get update -qq
+  - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch; fi
   # download the latest android sdk and unzip
   - ifconfig
   - export SDK_TAR=android-sdk_r21-linux.tgz
   - wget http://dl.google.com/android/$SDK_TAR
   - tar -zxf $SDK_TAR
-  # setup your ANDROID_HOME and PATH environment variables
+  # setup ANDROID_HOME and PATH environment variables
   - export ANDROID_HOME=`pwd`/android-sdk-linux
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
   # only update the sdk for the platform-tool
