Issue #100: Add a settings screen with a single setting that controls sync frequency.

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -15,6 +15,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="SettingsActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
         <activity android:name=".AboutUsingSshActivity">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
