--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-library</artifactId>
-                <version>1.3.RC2</version>
+                <version>1.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
