Stick to hamcrest core, in the hope of avoiding boring proguard clashes

--- a/agit-integration-tests/pom.xml
+++ b/agit-integration-tests/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>hamcrest-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.madgag</groupId>
