--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
             </dependency>
             <dependency>
                 <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-library</artifactId>
+                <artifactId>hamcrest-core</artifactId>
                 <version>1.3</version>
             </dependency>
         </dependencies>
